<resources>
    <string name="app_name">owey!</string>


    <!--Creation-->
    <string name="loan_uppercase">LOAN</string>
    <string name="debt_uppercase">DEBT</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="friend">Friend</string>
    <string name="note">Note (optional)</string>

    <!--Error-->
    <string name="error_title">An error occured!</string>
    <string name="error_wrong_input_body">Make sure, your input is correct.</string>
    <string name="error_code_empty_field">This field cannot be empty.</string>

    <!--Menu-->
    <string name="understood">Okay</string>
    <string name="option_edit">Edit debt</string>
    <string name="option_delete">Delete debt</string>
    <string name="dashboard_total">Total debts/loans</string>
    <string name="dashboard_loans">Loans:&#160;</string>
    <string name="dashboard_debts">Debts:&#160;</string>

    <string name="tab_home">&#160;Home</string>
    <string name="tab_debts">&#160;Debts</string>
    <string name="tab_loans">&#160;Loans</string>


</resources>
