<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_padding"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_back" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/container_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share" />

            <TextView
                style="@style/TextStyle.Toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/quarter_padding"
                android:layout_marginEnd="@dimen/half_padding"
                android:text="Share" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_more" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextStyle.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:background="@drawable/detail_layout_bg"
            android:orientation="vertical">

            <belka.us.androidtoggleswitch.widgets.ToggleSwitch
                android:id="@+id/switch_debt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_padding"
                android:textSize="@dimen/textsize_medium_large"
                custom:activeBgColor="@color/color_primary_dark"
                custom:textToggleLeft="@string/loan_uppercase"
                custom:textToggleRight="@string/debt_uppercase"
                custom:toggleWidth="@dimen/switch_width" />

            <LinearLayout
                android:id="@+id/container_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_euro" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_padding"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/amount" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edt_amount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/half_padding"
                            android:layout_weight=".7"
                            android:backgroundTint="@color/main"
                            android:enabled="false"
                            android:inputType="numberDecimal"
                            android:singleLine="true"
                            android:textColor="@color/gray_darker"
                            android:textColorHint="@color/gray_dark"
                            android:textCursorDrawable="@drawable/black_cursor" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_friends" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_padding"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/friend" />

                    <EditText
                        android:id="@+id/edt_friend"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/default_padding"
                        android:backgroundTint="@color/main"
                        android:enabled="false"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/gray_darker"
                        android:textColorHint="@color/gray_dark"
                        android:textCursorDrawable="@drawable/black_cursor" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_edit" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_padding"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/note" />

                    <EditText
                        android:id="@+id/edt_detail_note"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/default_padding"
                        android:backgroundTint="@color/main"
                        android:enabled="false"
                        android:inputType="text"
                        android:lines="4"
                        android:textColor="@color/gray_darker"
                        android:textColorHint="@color/gray_dark"
                        android:textCursorDrawable="@drawable/black_cursor" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>